--- a/index.html
+++ b/index.html
@@ -32,18 +32,51 @@
     <!-- Seção Animais para Adoção -->
     <section id="animals">
         <h2>Animais para Adoção</h2>
+        
+        <!-- Card de Animais -->
         <div class="animal">
-            <img src="https://via.placeholder.com/200x200.png?text=Gato" alt="Gato" class="animal-img">
+            <img src="quanto-tempo-deixar-o-gato-sozinho-1.jpg" alt="Gato" class="animal-img">
             <h3>Gato - Mimi</h3>
+            <p>Idade: 1 anos</p>
+            <button class="adopt-btn">Adotar</button>
+        </div>
+
+        <div class="animal">
+            <img src="1085566619-cachorro.webp" alt="Cachorro" class="animal-img">
+            <h3>Cachorro - Rex</h3>
+            <p>Idade: 1 anos</p>
+            <button class="adopt-btn">Adotar</button>
+        </div>
+
+        <!-- Adicionando mais cards de animais -->
+        <div class="animal">
+            <img src="download.jpg" alt="Coelho" class="animal-img">
+            <h3>Cachorro - Max</h3>
+            <p>Idade: 1 ano</p>
+            <button class="adopt-btn">Adotar</button>
+        </div>
+
+        <div class="animal">
+            <img src="image.png" alt="Pássaro" class="animal-img">
+            <h3>Gato - Lira</h3>
+            <p>Idade: 1 ano</p>
+            <button class="adopt-btn">Adotar</button>
+        </div>
+
+        <div class="animal">
+            <img src="image copy.png" alt="Gato Siamês" class="animal-img">
+            <h3>Jabuti - Lua</h3>
             <p>Idade: 2 anos</p>
             <button class="adopt-btn">Adotar</button>
         </div>
+
         <div class="animal">
-            <img src="https://via.placeholder.com/200x200.png?text=Cachorro" alt="Cachorro" class="animal-img">
-            <h3>Cachorro - Rex</h3>
-            <p>Idade: 3 anos</p>
+            <img src="680490343779960.jpg" alt="Cachorro Beagle" class="animal-img">
+            <h3>Cachorro - Toby</h3>
+            <p>Idade: 3 meses</p>
             <button class="adopt-btn">Adotar</button>
         </div>
+
     </section>
 
     <!-- Seção Contato -->
@@ -60,6 +93,10 @@
             <select id="animal" name="animal" required>
                 <option value="Mimi">Gato - Mimi</option>
                 <option value="Rex">Cachorro - Rex</option>
+                <option value="Max">Cachorro - Fluffy</option>
+                <option value="Lira">Gato - Lira</option>
+                <option value="Lua">Jabuti - Lua</option>
+                <option value="Toby">Cachorro - Toby</option>
             </select>
 
             <button type="submit">Enviar</button>
